# vexel

./: AGNO_RAG_OPTIMIZATION_PLAN.md  BREAKING_CHANGES_NOTICE.md  DEVELOPMENT_SUMMARY.md  DEV_ENVIRONMENT_SETUP.md  IMPLEMENTATION_PROMPT.md  README.md  VEXEL_RAG_OPTIMIZATION_IMPLEMENTATION_SUMMARY.md  cookiecutter-config-file.yml  docker-compose.dev.yml  docker-compose.override.yml  health_check.sh  knowledge-search-debug-summary.md  start_all.sh  start_vexel.sh
backend/app/: .env.example  =3.3.0  KNOWLEDGE_SEARCH_INTEGRATION_SUMMARY.md  README.md  UV_SETUP.md  pyproject.toml  pytest.ini  run.sh  start_backend.sh
backend/app/app/: main.py
backend/app/app/agents/: __init__.py  agentic_workflows.py  anti_hallucination.py  base_agent.py  chunking_factory.py  cross_file_knowledge.py  enhanced_file_processing.py  file_processing.py  fixed_document_knowledge.py  gemini_embedder.py  knowledge.py  memory_reasoning.py  team_collaboration.py  unified_agent.py
backend/app/app/api/: deps.py
backend/app/app/api/api_v1/: api.py
backend/app/app/core/: config.py
backend/app/app/crud/: __init__.py  base.py  crud_agent.py  crud_chat.py  crud_token.py  crud_user.py  crud_workflow.py
backend/app/app/middleware/: __init__.py  performance_middleware.py
backend/app/app/models/: __init__.py  agent.py  agent_enums.py  chat.py  knowledge_base.py  user.py  workflow.py
backend/app/app/schemas/: __init__.py  agent.py  chat.py  workflow.py
backend/app/app/services/: admin_service.py  content_analyzer.py  performance_monitor.py
backend/app/docs/: LEVEL4_TEAM_COLLABORATION.md
backend/app/migrations/: 001_add_user_tier_system.py  run_migrations.py
backend/app/scripts/: debug_gemini_agent.py  deploy_rag_system.sh  fix_agent_schema.py  install_rag_dependencies.sh  migrate_to_unified_collection.py  test_knowledge_workflow.sh  test_rag_system.sh  test_retry_logic.py
backend/app/tests/: README.md  conftest.py  run_comprehensive_api_tests.py  test_chunking_factory.py  test_content_analyzer.py
backend/app/tests/integration/: test_api_endpoints.py  test_rag_optimization_workflow.py
backend/app/tests/integration/api/: test_agent_management.py  test_authentication.py  test_chat_management.py  test_workflow_management.py
backend/app/tests/integration/level1/: test_agent_api.py
backend/app/tests/integration/level2/: test_knowledge_api.py
backend/app/tests/integration/level3/: test_memory_reasoning_api.py
backend/app/tests/unit/level1/: test_basic_agents.py
backend/app/tests/unit/level2/: test_knowledge_system.py
backend/app/tests/utils/: api_test_infrastructure.py  test_helpers.py
backend/app/tmp/: agent_686e44c3c8eddfcc147cf074_None.db  knowledge_agents.db  unified_agents.db  unified_memory_686e44c3c8eddfcc147cf074.db  unified_memory_test_user.db  unified_memory_test_user_123.db  vexel_memory_reasoning.db  vexel_team_collaboration.db  vexel_workflows.db
(+171 files in other folders)
