[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "app"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
keywords = []
authors = [
  { name = "U.N. Owen", email = "admin@dev-fsfp.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  # FastAPI and web framework
  "fastapi>=0.104.0",
  "uvicorn>=0.24.0",
  "python-multipart>=0.0.5",
  "email-validator>=1.3.0",
  "requests>=2.28.1",
  "httpx>=0.23.1",

  # Database and ODM
  "motor>=3.3.1",
  "odmantic>=1.0,<2.0",
  "pymongo>=4.0.0",

  # Authentication and security
  "passlib[bcrypt]>=1.7.4",
  "python-jose[cryptography]>=3.3.0",
  "argon2-cffi>=23.1.0",
  "argon2-cffi-bindings>=21.2.0",

  # Data validation and settings
  "pydantic>=2.7",
  "pydantic-settings>=2.0.3",

  # Background tasks and messaging
  "celery>=5.2.7",
  "tenacity>=8.1.0",
  "emails>=0.6.0",

  # Monitoring and logging
  "sentry-sdk>=2.13.0",

  # Templates and utilities
  "jinja2>=3.1.2",
  "setuptools>=65.6.3",

  # AI and ML dependencies
  "agno>=1.0.0",
  "openai>=1.0.0",
  "anthropic>=0.3.0",
  "google-generativeai>=0.8.0",
  "litellm>=1.0.0",

  # Vector database and document processing
  "qdrant-client>=1.0.0",
  "pypdf>=5.0.0",
  "sqlalchemy>=2.0.0",

  # Search and web tools
  "duckduckgo-search>=6.0.0",

  # Testing
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "pytest-asyncio>=0.21.0",
]

[project.optional-dependencies]
checks = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "isort>=5.11.2",
  "autoflake>=2.0.0",
  "flake8>=6.0.0",
]

[project.urls]
Documentation = "https://github.com/unknown/app#readme"
Issues = "https://github.com/unknown/app/issues"
Source = "https://github.com/unknown/app"

[tool.hatch.version]
path = "app/__version__.py"

[dirs.env]
virtual = "./.venv"

[tool.hatch.envs.default]
dev-mode = true
python="3.13"
dependencies = []

[tool.hatch.build.targets.sdist]
include = ["/app"]

[tool.hatch.envs.production]
dev-mode = false
features = []
path = ".venv"

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "isort>=5.11.2",
  "python>=3.11",
]
[tool.hatch.envs.lint.scripts]
style = [
  "isort --check --diff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "isort {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py311"]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 120
src_paths = ["app", "tests"]

[tool.mypy]
files = ["**/*.py"]
plugins = "pydantic.mypy"
show_error_codes = true
strict = true